<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>edu.wright</groupId>
    <artifactId>dirSyncPro</artifactId>
    <version>1.51</version>

    <name>DirSyncPro</name>
    <description>Backup files Sync app</description>
    <inceptionYear>2016</inceptionYear>

    <scm>
        <url>https://github.com/hendrixjoseph/DirSyncPro-cs7140</url>
        <connection>scm:git:https://github.com/hendrixjoseph/DirSyncPro-cs7140.git</connection>
        <developerConnection>scm:git:https://github.com/hendrixjoseph/DirSyncPro-cs7140.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <name>Joseph Hendrix</name>
            <email>hendrix.11@wright.edu</email>
            <url>http://hendrixjoseph.github.io</url>
            <roles>
                <role>developer</role>
            </roles>
            <organization>
                <![CDATA[<a href="http://www.wright.edu">Wright State University</a><br /><a href="https://engineering-computer-science.wright.edu">College of Engineering and Computer Science</a><br /><a href="https://engineering-computer-science.wright.edu/computer-science-and-engineering">Department of Computer Science and Engineering</a>]]>
            </organization>
            <properties>
                <picUrl>images/joe.jpg</picUrl>
            </properties>
        </developer>
        <developer>
            <name>Anargyros Angeleas</name>
            <email>angeleas.2@wright.edu</email>
            <roles>
                <role>developer</role>
            </roles>
            <organization>
                <![CDATA[<a href="http://www.wright.edu">Wright State University</a><br /><a href="https://engineering-computer-science.wright.edu">College of Engineering and Computer Science</a><br /><a href="https://engineering-computer-science.wright.edu/computer-science-and-engineering">Department of Computer Science and Engineering</a>]]>
            </organization>
        </developer>
        <developer>
            <name>Zacharias Chasparis</name>
            <email>chasparis.2@wright.edu</email>
            <roles>
                <role>developer</role>
            </roles>
            <organization>
                <![CDATA[<a href="http://www.wright.edu">Wright State University</a><br /><a href="https://engineering-computer-science.wright.edu">College of Engineering and Computer Science</a><br /><a href="https://engineering-computer-science.wright.edu/computer-science-and-engineering">Department of Computer Science and Engineering</a>]]>
            </organization>
        </developer>
    </developers>

    <dependencies>
<!--        <dependency>-->
<!--            <groupId>com.google.api-client</groupId>-->
<!--            <artifactId>google-api-client</artifactId>-->
<!--            <version>1.20.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.oauth-client</groupId>-->
<!--            <artifactId>google-oauth-client-jetty</artifactId>-->
<!--            <version>1.20.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.google.apis</groupId>-->
<!--            <artifactId>google-api-services-drive</artifactId>-->
<!--            &lt;!&ndash; version>v3-rev6-1.20.0</version &ndash;&gt;-->
<!--            <version>v2-rev211-1.21.0</version>-->
<!--        </dependency>-->


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <failOnError>
                        false
                    </failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>dirsyncpro.DirSyncPro</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${basedir}/target</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>/</directory>
                                    <filtering>true</filtering>
                                    <includes>
                                        <include>License.txt</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.soebes.maven.plugins.dmg</groupId>
                <artifactId>doxygen-maven-plugin</artifactId>
                <version>1.0.1</version>
                <configuration>
                    <projectName>${project.artifactId}</projectName>
                    <projectNumber>${project.version}</projectNumber>
                    <optimizeOutputJava>true</optimizeOutputJava>
                    <extractAll>true</extractAll>
                    <extractStatic>true</extractStatic>
                    <recursive>true</recursive>
                    <exclude>.git</exclude>
                    <recursive>true</recursive>
                    <umlLook>true</umlLook>
                    <callGraph>true</callGraph>
                    <callerGraph>true</callerGraph>
                    <createSubdirs>true</createSubdirs>
                    <haveDot>true</haveDot>
                    <generateLatex>false</generateLatex>
                    <generateHtml>true</generateHtml>
                    <outputDirectory>${basedir}/target/doxygen_doc</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.4</version>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <!-- plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.18.1</version>
            </plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.8.1</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <!-- report>cim</report -->
                            <report>dependencies</report>
                            <report>dependency-convergence</report>
                            <report>dependency-info</report>
                            <report>dependency-management</report>
                            <report>distribution-management</report>
                            <report>index</report>
                            <report>issue-tracking</report>
                            <report>license</report>
                            <!-- report>mailing-list</report -->
                            <!-- report>modules</report -->
                            <report>plugin-management</report>
                            <report>plugins</report>
                            <report>project-team</report>
                            <report>scm</report>
                            <report>summary</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <show>public</show>
                    <!-- top><![CDATA[]]></top -->
                    <detectLinks>true</detectLinks>
                    <doctitle>${project.name} API</doctitle>
                    <windowtitle>${project.name} API</windowtitle>
                    <level>private</level>
                    <linksource>true</linksource>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>